<resources>
    <string name="app_name">Gamb</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="cad">Register</string>
    <string name="senha">Pass</string>
    <string name="login">Login</string>
    <string name="text">Fill in all fields!</string>
    <string name="textfail">Autentication Failed</string>
    <string name="powere">Device Admin: enabled</string>
    <string name="powerd">Device Admin: disabled</string>
    <string name="permission1">You need permission to perform this function!</string>
    <string name="permission2">Why do you need permission?</string>
    <string name="permissionalert">Problem configuring permission!</string>
    <string name="printsuccess">Successfully Print!</string>
    <string name="printfail">Failed Print</string>
    <string name="cadfail">Register failed</string>
</resources>