<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="445dp"
        android:layout_height="172dp"
        app:srcCompat="@mipmap/logo" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_botao"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName"
        android:minHeight="48sp"
        android:padding="10dp"
        android:textColor="#FDBC19"
        android:textColorHint="#FDBC19"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_texto"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/senha"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48sp"
        android:padding="10dp"
        android:textColor="#FDBC19"
        android:textColorHint="#FDBC19"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAcessar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_botao"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:hint="@string/login"
        android:textColorHint="#FDBC19"
        android:minHeight="48sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FDBC19"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonCadastre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_button_cadastre"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:hint="@string/cad"
        android:textColorHint="#FDBC19"
        android:minHeight="48sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FDBC19"
        android:textIsSelectable="false"
        android:textSize="20sp" />

</LinearLayout>